nenolod     2006/05/05 01:40:30 UTC	(20060505-5245)
  Log:
  - return ASASL_FAIL if the account is frozen
  

  Changes:	Modified:
  +3 -0		trunk/modules/saslserv/plain.c (File Modified) 


jilles      2006/05/04 00:31:41 UTC	(20060504-5243)
  Log:
  Comment change: fantasy commands are now (since r4557) indeed checked separately.
  

  Changes:	Modified:
  +1 -4		trunk/src/ptasks.c (File Modified) 


jilles      2006/05/03 15:42:14 UTC	(20060503-5221)
  Log:
  Don't show (H) in the description for hidden servers (/whois etc).
  

  Changes:	Modified:
  +9 -4		trunk/src/node.c (File Modified) 


jilles      2006/05/03 15:02:49 UTC	(20060503-5207)
  Log:
  Update to new definition of atheme.channel.access.get.
  

  Changes:	Modified:
  +1 -1		trunk/contrib/xmlrpc_explorer.php (File Modified) 


jilles      2006/05/03 14:51:14 UTC	(20060503-5203)
  Log:
  Comment changes to CRYPT mechanism:
  - add warning that this allows logging in given just the
    encrypted password
  - $1$ MD5 based password encryption is originally from
    FreeBSD (phk), not GNU
  

  Changes:	Modified:
  +3 -1		trunk/modules/saslserv/crypt.c (File Modified) 


jilles      2006/05/03 14:43:23 UTC	(20060503-5199)
  Log:
  Remove cs_repair.c, it probably wasn't meant to be committed.
  (For broken anope conversions, change anope_convert.c instead
  to output the proper levels.)
  

  Changes:	Modified:
  +0 -121	trunk/contrib/cs_repair.c (File Deleted) 


jilles      2006/05/03 14:31:53 UTC	(20060503-5193)
  Log:
  Reserve space for the '\0' if we initialize a char array
  with a string constant (even if we never use it as a
  string).
  
  From nenolod's C++ cleanups.
  

  Changes:	Modified:
  +1 -1		trunk/src/base64.c (File Modified) 
  +1 -1		trunk/src/function.c (File Modified) 
  +1 -1		trunk/src/ubase64.c (File Modified) 


jilles      2006/05/01 17:09:39 UTC	(20060501-5161)
  Log:
  Change atheme.channel.access.get procedure to apply to the
  origin user always and not require +A.
  
