@@ -4,7 +4,7 @@
  *
  * PLAIN mechanism provider
  *
- * $Id: plain.c 5247 2006-05-05 01:41:08Z nenolod $
+ * $Id: plain.c 5249 2006-05-05 01:43:04Z nenolod $
  */
 
 #include "atheme.h"
@@ -12,7 +12,7 @@
 DECLARE_MODULE_V1
 (
 	"saslserv/plain", FALSE, _modinit, _moddeinit,
-	"$Id: plain.c 5247 2006-05-05 01:41:08Z nenolod $",
+	"$Id: plain.c 5249 2006-05-05 01:43:04Z nenolod $",
 	"Atheme Development Group <http://www.atheme.org>"
 );
 
@@ -70,6 +70,10 @@ static int mech_step(sasl_session_t *p, char *message, int len, char **out, int 
 
 	/* Done dissecting, now check. */
 	if(!(mu = myuser_find(auth)))
+		return ASASL_FAIL;
+
+	/* Is the account frozen? --nenolod */
+	if((md = metadata_find(mu, METADATA_USER, "private:freeze:freezer")) != NULL)
 		return ASASL_FAIL;
 
 	p->username = strdup(auth);
