@@ -1,3 +1,12 @@
+nenolod     2006/05/05 01:41:08 UTC	(20060505-5247)
+  Log:
+  - revert?
+  
+
+  Changes:	Modified:
+  +0 -3		trunk/modules/saslserv/plain.c (File Modified) 
+
+
 nenolod     2006/05/05 01:40:30 UTC	(20060505-5245)
   Log:
   - return ASASL_FAIL if the account is frozen
